<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/img_12"
    tools:context=".Signupteacher">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-70dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Teacher Registration"
        android:textColor="#FF5722"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"

        android:layout_marginTop="150dp"
        android:alpha="0.9"
        tools:ignore="ObsoleteLayoutParam,UselessParent">


        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:inputType="text"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:inputType="textPassword"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_key"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/securityKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="Get From HOD"
                android:inputType="textPassword"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="ReCaptcha"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,TextViewEdits,TouchTargetSizeCheck" />


        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/captchaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="number"
                android:text=" "
                android:textColor="#039BE5"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,TextViewEdits,TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/captchaEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="7"
                android:textSize="16sp"
                tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </TableRow>

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#01A111"
            android:onClick="signup"
            android:text="@string/signup" />
    </TableLayout>
</RelativeLayout>